--- a/config/packages/dev/swiftmailer.yaml
+++ b/config/packages/dev/swiftmailer.yaml
@@ -6,7 +6,7 @@ swiftmailer:
     username: envioson@gmail.com
     password: q!w@e#r$t%
     host: smtp.gmail.com
-    ecryption: ssl
+    encryption: ssl
     port: 465
     stream_options:
         ssl:
