--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.1.*",
         "symfony/maker-bundle": "^1.9",
+        "symfony/monolog-bundle": "^3.3",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "4.1.*",
         "symfony/yaml": "4.1.*"
