--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,14 @@
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "4.1.*",
         "symfony/console": "4.1.*",
+        "symfony/debug-pack": "^1.0",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.1.*",
         "symfony/maker-bundle": "^1.9",
         "symfony/monolog-bundle": "^3.3",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "4.1.*",
+        "symfony/var-dumper": "4.1.*",
         "symfony/yaml": "4.1.*"
     },
     "require-dev": {
